UI: UCD update and fix bugs

--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -12,15 +12,14 @@
 }
 
 .modelArts-header {
-  background-color: #333854 !important;
+  background-color: #282B33 !important;
   display: flex;
   justify-content: space-between;
 }
 
 .logo-text {
   display: inline-block;
-  font-family: HuaweiSansMedium;
-  font-size: 18px;
+  font-size: 14px;
   color: #FFFFFF;
   line-height: 24px;
 }
@@ -53,12 +52,11 @@
   float: left;
   width: 1px;
   height: 16px;
-  background: #575D6C;
+  background: #282B33;
   margin: 0 16px 0 16px;
 }
 
 .modelArts-header-link {
   text-decoration: none;
-  font-family: '方正兰亭黑简体常规';
   color: #ADB0B8;
 }
