--- a/src/app/components/attribute-panel/attribute-panel.component.html
+++ b/src/app/components/attribute-panel/attribute-panel.component.html
@@ -8,88 +8,131 @@
             </p>
         </d-form-item>
         <d-form-item>
-            <d-form-label>{{'insertPanels.tip.name'|translate}}</d-form-label>
+            <d-form-label><span class="title-label">{{'insertPanels.tip.name'|translate}}</span></d-form-label>
             <d-form-control>
                 <div>
-                    <input dTextInput autocomplete="off" style="width:184px;height:28px" [name]="'new-name'"
+                    <input dTextInput autocomplete="off" class="content-font" style="height:28px;" [name]="'new-name'"
                         (keyup)="changedValue=true" (blur)="attributeModel.blur(myForm1.form)" [required]="true"
                         placeholder="{{'attributePanel.namePlaceholder'|translate}}" [(ngModel)]="newName">
                 </div>
             </d-form-control>
         </d-form-item>
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'attributePanel.topName'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit" class="form-item">
+            <d-form-label><span class="title-label">{{'attributePanel.topName'|translate}}</span></d-form-label>
             <d-form-control>
-                <div>
+                <div class="content-font">
                     {{unit.name}}
                 </div>
             </d-form-control>
         </d-form-item>
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'insertPanels.tip.version'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.version'|translate}}</span></d-form-label>
             <d-form-control>
-                <div>
+                <div class="content-font">
                     {{unit.version}}
                 </div>
             </d-form-control>
         </d-form-item>
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'insertPanels.tip.description'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit && unit.desc" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.description'|translate}}</span></d-form-label>
             <d-form-control>
-                <div>
-                    {{unit.descryption}}
+                <div class="content-font">
+                    {{unit.desc}}
                 </div>
             </d-form-control>
         </d-form-item>
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'attributePanel.arrayGroup'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit && unit.portDetail" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.portDetail'|translate}}</span></d-form-label>
             <d-form-control>
-                <div>
+                <div class="content-font" style="white-space: break-spaces;">
+                    {{unit.portDetail}}
+                </div>
+                <d-data-table [dataSource]="descDataSource" [scrollable]="true" [type]="'striped'"
+                    [tableWidthConfig]="descWidthConfig">
+                    <thead dTableHead>
+                        <tr dTableRow>
+                            <th dHeadCell *ngFor="let colOption of descTableOptions.columns">{{ colOption.header }}</th>
+                        </tr>
+                    </thead>
+                    <tbody dTableBody>
+                        <ng-template let-rowItem="rowItem" let-rowIndex="rowIndex">
+                            <tr dTableRow>
+                                <td dTableCell *ngFor="let colOption of descTableOptions.columns">
+                                    {{rowItem[colOption.field]}}
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </tbody>
+                </d-data-table>
+            </d-form-control>
+        </d-form-item>
+        <d-form-item *ngIf="unit && unit.constraint" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.constraint'|translate}}</span></d-form-label>
+            <d-form-control>
+                <div class="content-font">
+                    {{unit.constraint}}
+                </div>
+            </d-form-control>
+        </d-form-item>
+
+        <d-form-item *ngIf="unit" class="form-item">
+            <d-form-label><span class="title-label">{{'attributePanel.arrayGroup'|translate}}</span></d-form-label>
+            <d-form-control>
+                <div class="content-font">
                     {{unit.group}}
                 </div>
             </d-form-control>
         </d-form-item>
 
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'insertPanels.tip.isVirtualmodel'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.isVirtualmodel'|translate}}</span>
+            </d-form-label>
             <d-form-control>
-                <div>
+                <div class="content-font">
                     {{unit.virtual ? ('insertPanels.tip.yes' | translate) : ('insertPanels.tip.no' | translate)}}
                 </div>
             </d-form-control>
         </d-form-item>
 
-        <d-form-item *ngIf="unit">
-            <d-form-label>{{'insertPanels.tip.topType'|translate}}</d-form-label>
+        <d-form-item *ngIf="unit" class="form-item">
+            <d-form-label><span class="title-label">{{'insertPanels.tip.topType'|translate}}</span></d-form-label>
             <d-form-control>
-                <d-select [options]="unitType.options" name="'unit-type'" style="width: 160px;" id="typeSelect"
-                    placeholder="{{'attributePanel.selectType'|translate}}" [filterKey]="'label'"
-                    [(ngModel)]="unitType.selected" (ngModelChange)="unitType.change($event, myForm1.form)"></d-select>
+                <select id="typeSelect" class="form-select" name="'unittype'" [(ngModel)]="unitType.selected"
+                    (ngModelChange)="unitType.change($event, myForm1.form)">
+                    <option *ngFor="let item of unitType.options" [ngValue]="item">{{item.label}}</option>
+                </select>
             </d-form-control>
         </d-form-item>
         <d-form-item *ngFor="let item of unitOptions.data">
-            <d-form-label [required]="item.required">{{item.label}}</d-form-label>
-            <d-form-control>
-                <ng-container *ngIf="item.type === 'string'">
-                    <input dTextInput autocomplete="off" style="width:184px;height:28px" [name]="'option-' + item.label"
-                        placeholder="{{item.default}}" [(ngModel)]="item.value" (keyup)="changedValue=true"
-                        (blur)="attributeModel.blur(myForm1.form)" />
-                </ng-container>
-                <ng-container *ngIf="item.type === 'bool'">
-                    <input type="checkbox" [(ngModel)]="item.value" [name]="'option-' + item.label"
-                        (keyup)="changedValue=true" (blur)="attributeModel.blur(myForm1.form)" />
-                </ng-container>
-                <ng-container *ngIf="item.type === 'int' || item.type === 'integer'">
-                    <input dTextInput autocomplete="off" style="width:184px;height:28px" [(ngModel)]="item.value"
-                        [name]="'option-' + item.label" placeholder="{{item.default}}" (keyup)="changedValue=true"
-                        (blur)="attributeModel.blur(myForm1.form)" />
-                </ng-container>
-                <ng-container *ngIf="item.type === 'list'">
-                    <d-select name="'option-' + item.label" [(ngModel)]="item.selected" [options]="item.options"
-                        [filterKey]="'label'" (ngModelChange)="attributeModel.blur(myForm1.form)"></d-select>
-                </ng-container>
-                <br /><span>{{item.desc}}</span>
-            </d-form-control>
+            <div class="form-item">
+                <d-form-label [required]="item.required">
+                    <div class="title-label" style="padding-bottom: 8px; display: inline-block;">{{item.label}}</div>
+                </d-form-label>
+                <d-form-control>
+                    <ng-container *ngIf="item.type === 'string'">
+                        <input class="content-font" dTextInput autocomplete="off" style="height:32px"
+                            [name]="'option-' + item.label.replaceAll(' ', '_')" placeholder="{{item.desc}}" [(ngModel)]="item.value"
+                            (keyup)="changedValue=true" (blur)="attributeModel.blur(myForm1.form)" />
+                    </ng-container>
+                    <ng-container *ngIf="item.type === 'bool'">
+                        <input class="content-font" type="checkbox" style="height:32px" [(ngModel)]="item.value"
+                            [name]="'option-' + item.label.replaceAll(' ', '_')" (keyup)="changedValue=true"
+                            (blur)="attributeModel.blur(myForm1.form)" placeholder="{{item.desc}}" />
+                    </ng-container>
+                    <ng-container *ngIf="item.type === 'int' || item.type === 'integer'">
+                        <input class="content-font" dTextInput autocomplete="off" style="height:32px"
+                            [(ngModel)]="item.value" [name]="'option-' + item.label.replaceAll(' ', '_')" placeholder="{{item.desc}}"
+                            (keyup)="changedValue=true" (blur)="attributeModel.blur(myForm1.form)" />
+                    </ng-container>
+                    <ng-container *ngIf="item.type === 'list'">
+                        <select class="form-select" [name]="'option-' + item.label.replaceAll(' ', '_')" [(ngModel)]="item.selected"
+                            (ngModelChange)="attributeModel.blur(myForm1.form)">
+                            <option [ngValue]="op" *ngFor="let op of item.options">{{op.label}}</option>
+                        </select>
+                        <span style="color:#adb0b8">{{item.desc}}</span>
+                    </ng-container>
+                </d-form-control>
+            </div>
         </d-form-item>
     </form>
 </div>
