--- a/src/app/components/attribute-panel/attribute-panel.component.less
+++ b/src/app/components/attribute-panel/attribute-panel.component.less
@@ -1,19 +1,19 @@
 .panel-content {
     padding: 20px;
-    height: calc(100% - 42px);
+    height : calc(100% - 42px);
 }
 
 .attribute-title {
-    font-size: 14px;
+    font-size  : 18px;
     font-weight: 600;
 }
 
 .drawer-menu {
-    padding: 12px;
+    margin: 12px;
 }
 
 .single-checkbox {
-    display: inline-block;
+    display     : inline-block;
     margin-right: 4px;
 }
 
@@ -23,4 +23,25 @@
 
 .item {
     margin-top: 24px;
+}
+
+.form-item {
+    padding: 4px 0 4px 0;
+}
+
+.title-label {
+    color: #8c8c8c;
+}
+
+.content-font {
+    color    : #1f1f1f;
+    font-size: 16px;
+}
+
+.form-select {
+    font-size   : 16px;
+    color       : #1f1f1f;
+    border-color: #adb0b8;
+    padding: 3px 36px 3px 8px;
+    border-radius: 2px;
 }
