--- a/src/app/components/text-editor/text-editor.component.html
+++ b/src/app/components/text-editor/text-editor.component.html
@@ -1,9 +1,2 @@
-<ace 
-     [value]="dotSrc"
-     [config]="config"
-     [theme]="'tomorrow'"
-     [mode]="'dot'"
-     (valueChange)="handleChange($event)"
-     (blur)="onBlur"
-     (focus)="onFocus"
-></ace>
+<ace [value]="dotSrc" [config]="config" [theme]="'tomorrow'" [mode]="'dot'" (valueChange)="handleChange($event)"
+     (blur)="onBlur" (focus)="onFocus"></ace>
