--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -24,6 +24,10 @@
             (click)="handleZoomFitButtonClick($event)">
             <img src={{zoomFitSvg}} />
         </d-button>
+        <d-button id="switch" dTooltip bsStyle="text-dark" [content]="'toolBar.switchButton' | translate"
+            (click)="handleSwitchButtonClick('switch')">
+            <img src={{switchSvg}} />
+        </d-button>
     </div>
     <div class="tool-bar-right">
         <span style="margin-right:10px;">
@@ -50,7 +54,8 @@
 <ng-template #graphSetting id="graphSetting">
     <d-layout class="basic-usage">
         <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
-            <li [ngbNavItem]="1">
+            <li #tab1 [ngbNavItem]="1" style="display: inline-block;" class="nav-tab nav-active"
+                (click)="tabSwitch($event, 'tab1')">
                 <a ngbNavLink>{{'toolBar.setting.basic'| translate}}</a>
                 <ng-template ngbNavContent>
                     <form dForm [layout]="layoutDirection" ngForm style="margin:10px">
@@ -69,7 +74,7 @@
                                 <textarea dTextarea name="desc" [(ngModel)]="formData.desc"></textarea>
                             </d-form-control>
                         </d-form-item>
-                        <d-form-item>
+                        <!-- <d-form-item>
                             <d-form-label>{{'toolBar.setting.graphRankdir' | translate}}</d-form-label>
                             <d-form-control>
                                 <div style="display: inline-block;">
@@ -84,7 +89,7 @@
                                     <label>{{radioOptions[1].label}}</label>
                                 </div>
                             </d-form-control>
-                        </d-form-item>
+                        </d-form-item> -->
                         <d-form-item>
                             <d-form-label>{{'toolBar.setting.skipDefault' | translate}}</d-form-label>
                             <d-form-control>
@@ -101,10 +106,11 @@
                     </form>
                 </ng-template>
             </li>
-            <li [ngbNavItem]="2">
+            <li #tab2 [ngbNavItem]="2" style="display: inline-block;" class="nav-tab"
+                (click)="tabSwitch($event, 'tab2')">
                 <a ngbNavLink>{{'toolBar.setting.perf'| translate}}</a>
                 <ng-template ngbNavContent>
-                    <form dForm [layout]="layoutDirection" ngForm style="margin:20px">
+                    <form dForm [layout]="layoutDirection" ngForm>
                         <d-form-item>
                             <d-form-label>{{'toolBar.setting.perf.enable' | translate}}</d-form-label>
                             <d-form-control>
@@ -166,8 +172,10 @@
                                 {{ rowItem[colOption.field] }}
                             </div>
                             <div *ngIf="colOption.field === 'dotSrc'">
-                                <ngbd-tooltip-customclass [displayedData]="rowItem[colOption.field]"
-                                    [tipData]="graphSelectTableData[rowIndex].dotSrc"></ngbd-tooltip-customclass>
+                                <div [ngbTooltip]="tipContent" #t1="ngbTooltip" (mouseenter)="toggleTip(t1, graphSelectTableData[rowIndex].dotSrc)"
+                                    placement="bottom" tooltipClass="my-custom-class-wide">
+                                    {{ rowItem[colOption.field] }}
+                                </div>
                             </div>
                             <div *ngIf="colOption.field === 'lastChanged'" class="edit-padding-fix">
                                 {{ rowItem[colOption.field] | date: 'yyyy-MM-dd HH:mm:ss'}}
@@ -183,6 +191,13 @@
             </tbody>
         </d-data-table>
     </d-content>
+</ng-template>
+
+
+<ng-template #tipContent let-context="context">
+    <div class="tips-block-top" style="background-color: #333854; font-size: 75%; margin: 20px; padding: 8px; width: 600px;">
+        {{context}}
+    </div>
 </ng-template>
 
 <ng-template #solutionSelect let-context='context'>
