UI: finish the first page

--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -39,12 +39,13 @@
 }
 
 .links-panel {
-  top: 1.5em;
-  right: 2em;
+  top:16px;
+  right: 24px;
 
   .links {
     display: flex;
     align-items: center;
+    vertical-align: middle;
   }
 }
 
